loading button custom view

--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ND940C3-Project</string>
+    <string name="app_name">LoadApp</string>
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
@@ -11,4 +11,9 @@
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
+
+    <string name="download_first_item">Glide - Image Loading Library by BumpTech</string>
+    <string name="download_second_item">LoadApp - Current repository by Udacity</string>
+    <string name="download_third_item">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+    <string name="download">Download</string>
 </resources>
