--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -3,10 +3,12 @@
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
-
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
+    <string name="notification_channel_id">notification_channel_id</string>
+    <string name="channel_name">Udacity Channel</string>
+    <string name="channel_description">Udacity Channel Description</string>
 
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
@@ -17,4 +19,9 @@
     <string name="download_third_item">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
     <string name="download">Download</string>
     <string name="toast_message">Please select the file to download</string>
+    <string name="file_name">File name:</string>
+    <string name="status">Status:</string>
+    <string name="ok">ok</string>
+    <string name="success">Success</string>
+    <string name="fail">Fail</string>
 </resources>
