action for notification

--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="ok">ok</string>
     <string name="success">Success</string>
     <string name="fail">Fail</string>
+    <string name="check_the_status">Check the status</string>
 </resources>
